WIP HW 9 Exercise 1

--- a/Homework/Victor_Ramirez_Assignment_09 Embeddings for Text.ipynb
+++ b/Homework/Victor_Ramirez_Assignment_09 Embeddings for Text.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "id": "7X58hOMTUH-w"
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -77,9 +77,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb.npz\n",
-      "17465344/17464789 [==============================] - 3s 0us/step\n",
-      "17473536/17464789 [==============================] - 3s 0us/step\n",
       "X_train.shape: (25000,)\n",
       "Y_train.shape: (25000,)\n",
       "X_test.shape: (25000,)\n",
@@ -119,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -143,9 +140,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb_word_index.json\n",
-      "1646592/1641221 [==============================] - 0s 0us/step\n",
-      "1654784/1641221 [==============================] - 0s 0us/step\n",
       "Largest ID: 88587\n"
      ]
     }
@@ -180,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -235,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -306,19 +300,151 @@
     "|Token|Pos Count|Neg Count|\n",
     "|-|-|-|\n",
     "|good|4767|4849|\n",
-    "|bad|1491|4396|"
+    "|bad|1491|4396|\n",
+    "|amazing|-|-|\n",
+    "|boring|-|-|\n",
+    "|laugh|-|-|\n",
+    "|cry|-|-|"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def word_in_list(words, word):\n",
+    "    if word in words:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {
     "id": "8YOYo6d01aWI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'good': 4767, 'amazing': 868, 'cry': 231, 'bad': 1491, 'boring': 301, 'laugh': 525}\n"
+     ]
+    }
+   ],
    "source": [
     "tokens = ['good', 'bad', 'amazing', 'boring', 'laugh', 'cry']\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# Create a list of all the positive reviews.\n",
+    "# reviews_pos = [x for (i, x) in enumerate(X_train) if Y_train[i]]\n",
+    "\n",
+    "# Create a list of all the negative reviews.\n",
+    "# reviews_neg = [x for (i, x) in enumerate(X_train) if not Y_train[i]]\n",
+    "\n",
+    "# print(len(reviews_pos))\n",
+    "# print(len(reviews_neg))\n",
+    "\n",
+    "# TODO loop all reviews\n",
+    "# decoded_reviews_pos = decode(reviews_pos[0])\n",
+    "# print(\"positive review \", decoded_reviews_pos)\n",
+    "\n",
+    "# decoded_reviews_neg = decode(reviews_neg[0])\n",
+    "# print(\"negative review \", decoded_reviews_neg)\n",
+    "\n",
+    "# arr = np.array([2, 3, 4, 5, 3, 4, 5, 3, 5, 4, 7, 8, 3, 6, 2])\n",
+    "# print('Numpy Array:')\n",
+    "# print(X_train)\n",
+    "# # Count occurrence of element '3' in numpy array\n",
+    "# count = np.count_nonzero(arr == 3)\n",
+    "# print('Total occurences of \"3\" in array: ', count)\n",
+    "\n",
+    "# for i in X_train:\n",
+    "#     # results = decode(X_train[0]))\n",
+    "#     print(type(i))\n",
+    "    \n",
+    "# pd.value_counts(np.array(text_lengths_pos[0]))\n",
+    "\n",
+    "# print(type(X_train))\n",
+    "# print(len(X_train))\n",
+    "\n",
+    "# results = decode(X_train[0])\n",
+    "\n",
+    "# print(results)\n",
+    "# print(tokens[0])\n",
+    "# print(word_in_list(results, tokens[0]))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# print(\"good appears = \", results.count(\"good\"))\n",
+    "\n",
+    "# print(results)\n",
+    "# print(len(X_train))\n",
+    "\n",
+    "# print(type(X_train[0]))\n",
+    "\n",
+    "\n",
+    "# word_count = 0\n",
+    "\n",
+    "# print(len(decoded_reviews_pos))\n",
+    "\n",
+    "# TODO loop all reviews\n",
+    "# decoded_reviews_pos = decode(reviews_pos[0])\n",
+    "# print(\"positive review \", decoded_reviews_pos)\n",
+    "\n",
+    "\n",
+    "# working loop\n",
+    "# for x in reviews_pos:\n",
+    "#     # working loop\n",
+    "#     result = decode(x)\n",
+    "#     word_count += decoded_reviews_pos.count(\"good\")\n",
+    "\n",
+    "positive_count = {}\n",
+    "negative_count = {}\n",
+    "    \n",
+    "# loop all the review in the training data\n",
+    "for x in range(len(X_train)):\n",
+    "    \n",
+    "    result = decode(X_train[x])    \n",
+    "    \n",
+    "    # loop the review text\n",
+    "    for review in tokens:\n",
+    "        \n",
+    "        # split text on space\n",
+    "        if review in result.split(\" \"):\n",
+    "            \n",
+    "            # positive review found\n",
+    "            if Y_train[x] == 1:\n",
+    "                \n",
+    "                if positive_count.get(review) == None:\n",
+    "                    \n",
+    "                    positive_count[review] = 0\n",
+    "                    \n",
+    "                positive_count[review] += 1\n",
+    "                \n",
+    "            \n",
+    "                \n",
+    "print(positive_count)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "# print(text_lengths_pos)\n",
+    "# print(text_lengths_neg)\n",
+    "\n",
+    "# print(decode(X_train[0]))\n",
+    "\n",
+    "# results = decode(X_train[0])\n",
+    "# print(type(results))\n",
+    "\n",
+    "# print(type(X_train))\n",
+    "\n",
+    "# print(\"---------\")\n",
+    "# print(decode(X_train[1]))\n"
    ]
   },
   {
