--- a/Homework/Victor_Ramirez_Assignment_09 Embeddings for Text.ipynb
+++ b/Homework/Victor_Ramirez_Assignment_09 Embeddings for Text.ipynb
@@ -301,28 +301,15 @@
     "|-|-|-|\n",
     "|good|4767|4849|\n",
     "|bad|1491|4396|\n",
-    "|amazing|-|-|\n",
-    "|boring|-|-|\n",
-    "|laugh|-|-|\n",
-    "|cry|-|-|"
+    "|amazing|868|240|\n",
+    "|boring|301|1205|\n",
+    "|laugh|525|685|\n",
+    "|cry|231|114|"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def word_in_list(words, word):\n",
-    "    if word in words:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {
     "id": "8YOYo6d01aWI"
    },
@@ -331,76 +318,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'good': 4767, 'amazing': 868, 'cry': 231, 'bad': 1491, 'boring': 301, 'laugh': 525}\n"
+      "{'good': 4767, 'amazing': 868, 'cry': 231, 'bad': 1491, 'boring': 301, 'laugh': 525}\n",
+      "{'good': 4849, 'bad': 4396, 'laugh': 685, 'boring': 1205, 'amazing': 240, 'cry': 114}\n"
      ]
     }
    ],
    "source": [
     "tokens = ['good', 'bad', 'amazing', 'boring', 'laugh', 'cry']\n",
     "# YOUR CODE HERE\n",
-    "\n",
-    "# Create a list of all the positive reviews.\n",
-    "# reviews_pos = [x for (i, x) in enumerate(X_train) if Y_train[i]]\n",
-    "\n",
-    "# Create a list of all the negative reviews.\n",
-    "# reviews_neg = [x for (i, x) in enumerate(X_train) if not Y_train[i]]\n",
-    "\n",
-    "# print(len(reviews_pos))\n",
-    "# print(len(reviews_neg))\n",
-    "\n",
-    "# TODO loop all reviews\n",
-    "# decoded_reviews_pos = decode(reviews_pos[0])\n",
-    "# print(\"positive review \", decoded_reviews_pos)\n",
-    "\n",
-    "# decoded_reviews_neg = decode(reviews_neg[0])\n",
-    "# print(\"negative review \", decoded_reviews_neg)\n",
-    "\n",
-    "# arr = np.array([2, 3, 4, 5, 3, 4, 5, 3, 5, 4, 7, 8, 3, 6, 2])\n",
-    "# print('Numpy Array:')\n",
-    "# print(X_train)\n",
-    "# # Count occurrence of element '3' in numpy array\n",
-    "# count = np.count_nonzero(arr == 3)\n",
-    "# print('Total occurences of \"3\" in array: ', count)\n",
-    "\n",
-    "# for i in X_train:\n",
-    "#     # results = decode(X_train[0]))\n",
-    "#     print(type(i))\n",
-    "    \n",
-    "# pd.value_counts(np.array(text_lengths_pos[0]))\n",
-    "\n",
-    "# print(type(X_train))\n",
-    "# print(len(X_train))\n",
-    "\n",
-    "# results = decode(X_train[0])\n",
-    "\n",
-    "# print(results)\n",
-    "# print(tokens[0])\n",
-    "# print(word_in_list(results, tokens[0]))\n",
-    "\n",
-    "\n",
-    "\n",
-    "# print(\"good appears = \", results.count(\"good\"))\n",
-    "\n",
-    "# print(results)\n",
-    "# print(len(X_train))\n",
-    "\n",
-    "# print(type(X_train[0]))\n",
-    "\n",
-    "\n",
-    "# word_count = 0\n",
-    "\n",
-    "# print(len(decoded_reviews_pos))\n",
-    "\n",
-    "# TODO loop all reviews\n",
-    "# decoded_reviews_pos = decode(reviews_pos[0])\n",
-    "# print(\"positive review \", decoded_reviews_pos)\n",
-    "\n",
-    "\n",
-    "# working loop\n",
-    "# for x in reviews_pos:\n",
-    "#     # working loop\n",
-    "#     result = decode(x)\n",
-    "#     word_count += decoded_reviews_pos.count(\"good\")\n",
     "\n",
     "positive_count = {}\n",
     "negative_count = {}\n",
@@ -425,26 +350,17 @@
     "                    \n",
     "                positive_count[review] += 1\n",
     "                \n",
-    "            \n",
+    "            # negative review found\n",
+    "            elif Y_train[x] == 0:\n",
+    "                \n",
+    "                if negative_count.get(review) == None:\n",
+    "                    \n",
+    "                    negative_count[review] = 0\n",
+    "                    \n",
+    "                negative_count[review] += 1\n",
     "                \n",
     "print(positive_count)\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "# print(text_lengths_pos)\n",
-    "# print(text_lengths_neg)\n",
-    "\n",
-    "# print(decode(X_train[0]))\n",
-    "\n",
-    "# results = decode(X_train[0])\n",
-    "# print(type(results))\n",
-    "\n",
-    "# print(type(X_train))\n",
-    "\n",
-    "# print(\"---------\")\n",
-    "# print(decode(X_train[1]))\n"
+    "print(negative_count)\n"
    ]
   },
   {
