Completed HW 9 Exercise 2

--- a/Homework/Victor_Ramirez_Assignment_09 Embeddings for Text.ipynb
+++ b/Homework/Victor_Ramirez_Assignment_09 Embeddings for Text.ipynb
@@ -774,19 +774,15 @@
    "source": [
     "*Written answers:*\n",
     "\n",
-    "1. \n",
-    "    |Model|training accuracy|validation accuracy|\n",
-    "    |-|-|-|\n",
-    "    |*LR-C* (Logistic Regression Concatenating)|-|-|\n",
-    "    |*LR-A* (Logistic Regression Averaging)|-|-|\n",
-    "2. \n",
-    "3. \n",
-    "4. \n"
+    "1. Model *LR-C* (Logistic Regression Concatenating) has a final training accuracy of 0.8100 and a final validation accuracy of 0.6816. Model *LR-A* (Logistic Regression Averaging) has a final training accuracy of 0.6942 and a final validation accuracy of 0.6884.    \n",
+    "2. Model *LR-C* (Logistic Regression Concatenating) flattens by turning (20 x 1000) data into (20000,) parameters. Model *LR-A* (Logistic Regression Averaging) flattens turning (20 x 1000) data into (1000,) parameters.\n",
+    "3. Model *LR-C* (Logistic Regression Concatenating) is overfitting. The model is performing well on the training data but is not well with the validation data. \n",
+    "4. Model *LR-C* (Logistic Regression Concatenating) = The result is a separate feature for each token at each position. Model *LR-A* (Logistic Regression Averaging) = The result is an array with average token counts, ignoring position. The concatenating has a final validation accuracy of 0.6816. The averaging has a final validation accuracy of 0.6884. With these results the Logistic Regression Averaging does not suffer of overfitting. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -814,9 +810,29 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten (Flatten)           (None, 20000)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 20001     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 20,001\n",
+      "Trainable params: 20,001\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
     }
    ],
    "source": [
+    "\n",
     "# def build_onehot_model(average_over_positions=False):\n",
     "# Logistic Regression Concatenating \n",
     "\n",
@@ -838,12 +854,15 @@
     "# Convert the return value into a DataFrame so we can see the train loss \n",
     "# and binary accuracy after every epoch.\n",
     "history = pd.DataFrame(history.history)\n",
-    "plot_history(history)"
+    "plot_history(history)\n",
+    "\n",
+    "# print model summary\n",
+    "model.summary()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +870,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "352/352 [==============================] - 2s 4ms/step - loss: 0.6908 - accuracy: 0.6044 - val_loss: 0.6886 - val_accuracy: 0.6336\n",
+      "352/352 [==============================] - 2s 3ms/step - loss: 0.6908 - accuracy: 0.6044 - val_loss: 0.6886 - val_accuracy: 0.6336\n",
       "Epoch 2/5\n",
       "352/352 [==============================] - 1s 3ms/step - loss: 0.6857 - accuracy: 0.6689 - val_loss: 0.6840 - val_accuracy: 0.6664\n",
       "Epoch 3/5\n",
@@ -871,9 +890,30 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " global_average_pooling1d (G  (None, 1000)             0         \n",
+      " lobalAveragePooling1D)                                          \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 1001      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1,001\n",
+      "Trainable params: 1,001\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
     }
    ],
    "source": [
+    "\n",
     "# def build_onehot_model(average_over_positions=False):\n",
     "# Logistic Regression Averaging\n",
     "\n",
@@ -895,7 +935,10 @@
     "# Convert the return value into a DataFrame so we can see the train loss \n",
     "# and binary accuracy after every epoch.\n",
     "history = pd.DataFrame(history.history)\n",
-    "plot_history(history)"
+    "plot_history(history)\n",
+    "\n",
+    "# print model summary\n",
+    "model.summary()\n"
    ]
   },
   {
