Completed HW 9 Exercise 4

--- a/Homework/Victor_Ramirez_Assignment_09 Embeddings for Text.ipynb
+++ b/Homework/Victor_Ramirez_Assignment_09 Embeddings for Text.ipynb
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 154,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 155,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4109,10 +4109,10 @@
    "source": [
     "*Written answers:*\n",
     "\n",
-    "1. \n",
-    "2. \n",
-    "3. \n",
-    "4. \n"
+    "1. Yes, the embeddings have separated the positive and negative words. The most negative word is **avoid**. This plotting of the embeddings make sense. The positive review words on the right side of the plot and the negative review words on the left side of the plot.\n",
+    "2. Two words that are surprising are **English** and **strange** both have positive rankings. The number digits seem to be positive number but that is somewhat weird as digits could be positive or negative. \n",
+    "3. The word **crazy** is close to (0,0), this would mean that the model maybe having a difficult time determining if it is positive or negative.\n",
+    "4. The two learned embeddings dimensions mean that we created and use a 2-dimensional layer to translate our vectors to 2 dimensions.\n"
    ]
   },
   {
